[package]
name = "exact_format"
description = "A procedural macro for compile time string replacement without using the standard format placeholder syntax (`{}`). This is most useful when dealing with strings that contain `{ }` blocks you do no wish to interpolate e.g. writing javascript."
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/exact_format"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = [
    "parsing",
    "derive",
    "printing",
    "proc-macro",
] }
proc-macro2 = "1"
quote = "1"
